--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ install:
   - pip install lxml
   - pip install beautifulsoup4
   - pip install requests
+  - pip install coverage
+  - pip install coveralls
 
 script:
-  - python -m pytest --verbose tests
+  - python -m pytest --verbose --cov=xcrawler tests
+  - coveralls
