--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,7 @@ python:
 
 install:
   - pip install git+https://github.com/jaybaird/python-bloomfilter.git
-  - pip install lxml
-  - pip install beautifulsoup4
-  - pip install requests
-  - pip install coverage
-  - pip install coveralls
+  - pip install -r test_requirements.txt
 
 script:
   - python -m pytest --verbose --cov=xcrawler tests
